2005-05-10  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Using "sync_offline" in 
	exchange_conf_entries[], instead of "offline_sync".

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_connect): Added argument
	server name to error message.

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_connect): Corrected the
	quota warning message and marked it for translation. Fixes #270363.

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate): Removed the hard coded support url
	from translateable error message. Fixes #272514

2005-05-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_removed): Displaying 
	separate warning messages for accoount deletion and account removal.
	Fixes #274066

2005-05-09  Vivek Jain  <jvivek@novell.com>

	**Fixes #273846
		#273878
	* calendar/e-cal-backend-exchange.c: (get_attach_file_contents),
	Modified the function to take length as an argument, so that we
	can return no of bytes in the file.
	(build_msg): pass the len pointer and use this length for writing the
	file

2005-04-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.3.1
	* NEWS : Updated
	* autogen.sh : Changed the package name to evolution-exchange

2005-04-22  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.[ch] (requires_relogin): Check for
	the change in auth type, only if it is set. 
	
2005-04-22  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.[ch] (add_esources): Removed.
	(add_account_esources): Added new to create e-sources for all the
	folders.
	(add_folder_esource): Added new to create e-source for a given folder.
	(add_sources): Creating a list which contains folder name, uri and type
	for all the folders, which is used in add_account_sources(). Moved 