@@ -1,3 +1,13 @@
+2005-05-11  Sushma Rai  <rsushma@novell.com>
+
+	* addressbook/e-book-backend-exchange.c (func_match): Forming the search
+	filter for contacts with nickname property.
+
+	* addressbook/e-book-backend-gal.c (func_is_or_begins_with): Added 
+	mailNickname (alias) attribute to LDAP search filter.
+	Also mapping mailNickname to E_CONTACT_NICKNAME in structure prop_info.
+	Fixes #255756.
+
 2005-05-10  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-exchange-provider.c: Using "sync_offline" in 
